objects/Account_Integration_Tasks__c.object
<CustomObject>
    <fields>
        <fullName>Care_Team_Member_Role__c</fullName>
        <label>Care Team Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Care_Team_Member_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Care_Team_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Care Team Member (Contact Lookup)</inlineHelpText>
        <label>Care Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Integration Tasks (Care Team Member)</relationshipLabel>
        <relationshipName>Account_Integration_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Integration Question (Lookup)</inlineHelpText>
        <label>Integration Question</label>
        <referenceTo>Account_Integration_Tasks_Master__c</referenceTo>
        <relationshipName>Integration_Questions_for_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mark_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician__c</fullName>
        <inlineHelpText>Physician (Contacts Lookup)</inlineHelpText>
        <label>Physician</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Integration Tasks (Physician)</relationshipLabel>
        <relationshipName>Account_Integration_Tasks1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Integration Tasks</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Physician__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Integration_Question__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Care_Team_Member__c</columns>
        <columns>Care_Team_Member_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Physician__c</field>
            <operation>contains</operation>
            <value>Ryan Hall,Poddar</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Integration Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Integration Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>